python/rregadmin/diff/hive_wrapper.py

# generated by 'xml2py'
# flags '-c -d -v -k defst -lrregadmin -m rregadmin.util.glib_wrapper -m rregadmin.util.icu_wrapper -m rregadmin.util.path_wrapper -m rregadmin.util.icu_wrapper -m rregadmin.util.path_info_wrapper -m rregadmin.util.ustring_wrapper -m rregadmin.util.offset_wrapper -m rregadmin.util.value_wrapper -m rregadmin.util.ustring_list_wrapper -m rregadmin.hive.types_wrapper -m rregadmin.registry.types_wrapper -m rregadmin.diff.diff_info_wrapper -r ^hive_diff -r ^hive_compare -r ^hive_version_compare -r ^hive_equal -r .*key_cell_diff -o hive_wrapper.py hive_wrapper.xml'
from ctypes import *

from rregadmin.util.path_wrapper import rra_path
from rregadmin.hive.types_wrapper import Hive
from rregadmin.diff.diff_info_wrapper import rra_diff_info
_libraries = {}
_libraries['librregadmin.so.1'] = CDLL('librregadmin.so.1')
from rregadmin.diff.diff_info_wrapper import HiveVersion
from rregadmin.diff.diff_info_wrapper import gboolean


# ../../../rregadmin/diff/hive.h 39
hive_diff = _libraries['librregadmin.so.1'].hive_diff
hive_diff.restype = c_int
# hive_diff(in_path, in_from_hive, in_to_hive, in_di)
hive_diff.argtypes = [POINTER(rra_path), POINTER(Hive), POINTER(Hive), POINTER(rra_diff_info)]
hive_diff.__doc__ = \
"""int hive_diff(rra_path * in_path, Hive * in_from_hive, Hive * in_to_hive, rra_diff_info * in_di)
../../../rregadmin/diff/hive.h:39"""
# ../../../rregadmin/diff/hive.h 53
hive_compare = _libraries['librregadmin.so.1'].hive_compare
hive_compare.restype = c_int
# hive_compare(in_path, in_hive1, in_hive2)
hive_compare.argtypes = [POINTER(rra_path), POINTER(Hive), POINTER(Hive)]
hive_compare.__doc__ = \
"""int hive_compare(rra_path * in_path, Hive * in_hive1, Hive * in_hive2)
../../../rregadmin/diff/hive.h:53"""
# ../../../rregadmin/diff/hive.h 59
hive_version_compare = _libraries['librregadmin.so.1'].hive_version_compare
hive_version_compare.restype = c_int
# hive_version_compare(in_v1, in_v2)
hive_version_compare.argtypes = [POINTER(HiveVersion), POINTER(HiveVersion)]
hive_version_compare.__doc__ = \
"""int hive_version_compare(unknown * in_v1, unknown * in_v2)
../../../rregadmin/diff/hive.h:59"""
# ../../../rregadmin/diff/hive.h 67
hive_equal = _libraries['librregadmin.so.1'].hive_equal
hive_equal.restype = gboolean
# hive_equal(in_path, in_hive1, in_hive2)
hive_equal.argtypes = [POINTER(rra_path), POINTER(Hive), POINTER(Hive)]
hive_equal.__doc__ = \
"""gboolean hive_equal(rra_path * in_path, Hive * in_hive1, Hive * in_hive2)
../../../rregadmin/diff/hive.h:67"""
__all__ = ['hive_diff', 'hive_compare', 'hive_version_compare',
           'hive_equal']
